postgis/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: postgis
  labels:
    name: postgis
    app: postgis
