postgis/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: postgis-service-nodeport
  namespace: postgis
  labels:
    app: postgis
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgresql
    nodePort: 30432  # Node port for external access (30000-32767 range)
  selector:
    app: postgis
