postgis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgis-service
  namespace: postgis
  labels:
    app: postgis
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgresql
  selector:
    app: postgis
